# feature-engineering

./: .env.example  .gitignore  GUIDE_ROOT.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  config.toml  main.py  pyproject.toml  run.py
docs/superpowers/plans/: 2026-04-24-refactor-review-fixes.md  2026-04-24-simple-categorized-feature-pipeline.md  2026-05-05-architecture-review-and-bug-hunt.md
notebooks/: project_structure_walkthrough.ipynb
src/: GUIDE_src.md  main.py  run.py
src/feature_engineering/: GUIDE_feature_engineering.md  __init__.py
src/feature_engineering/engine/: GUIDE_engine.md  __init__.py  batch.py  online.py
src/feature_engineering/features/: GUIDE_features.md  __init__.py  registry.py  returns.py  trend.py  volatility.py  volume.py
src/feature_engineering/pipeline/: GUIDE_pipeline.md  __init__.py  clean.py  cli.py  config.py  constants.py  engineer.py  export.py  load.py
tests/: GUIDE_tests.md  test_config_validation.py  test_engines.py  test_feature_math.py  test_simple_pipeline.py  test_simple_project_structure.py
tests/data/: toy_config.toml  toy_prices.csv
